<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/about_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.epicdecals.openslider.MainActivity"
    tools:showIn="@layout/app_bar_main">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/container_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ad_view">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:fontFamily="sans-serif"
                    android:paddingBottom="10dp"
                    android:text="@string/about_TV1"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="20sp"
                    android:textStyle="normal|bold"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:fontFamily="monospace"
                    android:paddingBottom="10dp"
                    android:text="@string/about_TV2"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="2"
                    android:fontFamily="monospace"
                    android:paddingBottom="10dp"
                    android:text="@string/about_TV3"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="3"
                    android:fontFamily="monospace"
                    android:paddingBottom="10dp"
                    android:text="@string/about_TV4"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="17sp" />

            </GridLayout>

        </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

</RelativeLayout>
