<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#995599"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:text="@string/SETTINGS_BT_TITLE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_settings_bt_title"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="18sp"
                android:padding="5dp"
                android:textStyle="normal|bold" />

            <TextView
                android:text="@string/SETTINGS_BT_ADDRESS_TO_USE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_savedBTAddress"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="14sp"
                android:padding="5dp"/>

            <Button
                android:text="@string/settings_paired_devices"
                android:id="@+id/btn_pairedDevices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_below="@+id/textView7"
                android:layout_centerHorizontal="true" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_pairedDevices"
                android:id="@+id/list_pairedDevices" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>